ECA-2273: Reduce memory footprint of database export operation.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@12865 37aeb1de-b14b-0410-9a0e-82b28170d228